Commiting files that were modified in old repo after 1.5.0 freeze.
Commiting so many changes at once won't normally happen, it's just a result of the initial migration to Git.

--- a/src/widgets/widgets.carousel.css
+++ b/src/widgets/widgets.carousel.css
@@ -121,7 +121,11 @@
 .glowCSSVERSION-carousel .carousel-prev-disabled,
 .glowCSSVERSION-carousel .carousel-next-disabled,
 .glowCSSVERSION-vCarousel .carousel-prev-disabled,
-.glowCSSVERSION-vCarousel .carousel-next-disabled {
+.glowCSSVERSION-vCarousel .carousel-next-disabled,
+.glowCSSVERSION-carousel .carousel-prev-disabled a,
+.glowCSSVERSION-carousel .carousel-next-disabled a,
+.glowCSSVERSION-vCarousel .carousel-prev-disabled a,
+.glowCSSVERSION-vCarousel .carousel-next-disabled a {
 	cursor: default;
 }
 
