--- a/manualtests/template/index.html
+++ b/manualtests/template/index.html
@@ -2,16 +2,45 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-	<title>Manual Test Template</title>
-	<script type="text/javascript">
-		// this should be an array of module names required for this test
-		// (ideally the minimum required, to test dependencies)
-		var modulesToLoad = ['glow.widgets.Mask'];
-	</script>
-	<script type="text/javascript" src="../includes/manualtest.js"></script>
+	<title>Module Name</title>
+	<script type="text/javascript" src="../includes/manualtests.js"></script>
+	<!-- loading gloader, to change the location of gloader, edit manualtests.js -->
+	<script type="text/javascript">// <![CDATA[
+		document.write(
+			'<script type="text/javascript" src="' + manualTests.config.gloaderPath + '"> \
+				gloader.use("glow", { \
+					$map:  manualTests.config.mapPath, \
+					$base: manualTests.config.basePath \
+				}); \
+			<' + '/script>'
+		);
+	// ]]></script>
 </head>
 
 <body>
+	<script type="text/javascript">gloader.load(["glow", "@VERSION@"])</script>
+	
+	<h1>Module Name</h1>
+	
+	<h2>Test Title</h2>
+	
+	<p>Brief description</p>
+	
+	<ul>
+		<li>List of things to test</li>
+	</ul>
+	
+	<!-- output visual / interactive parts of your test here -->
+	
+	<script type="text/javascript" class="showSrc">
+		// this is my script
+		if (false) {
+			doSomeStuff();
+		}
+	</script>
+	
+	
+	<script type="text/javascript">manualTests.showSrc()</script>
 	
 </body>
 </html>
