Manual Tests: Updating autosuggest, template and manualtest.js

--- a/manualtests/template/index.html
+++ b/manualtests/template/index.html
@@ -15,11 +15,11 @@
 			<' + '/script>'
 		);
 	// ]]></script>
+	
+	<script type="text/javascript">gloader.load(['glow', '@VERSION@'])</script>
 </head>
 
 <body>
-	<script type="text/javascript">gloader.load(["glow", "@VERSION@"])</script>
-	
 	<h1>Module Name</h1>
 	
 	<h2>Test Title</h2>
