Manualtests: Carousel page updated

--- a/manualtests/template/index.html
+++ b/manualtests/template/index.html
@@ -40,7 +40,7 @@
 	</script>
 	
 	
-	<script type="text/javascript">manualTests.showSrc()</script>
-	
+	<script type="text/javascript">manualTests.showSrc();</script>
+	<script type="text/javascript">manualTests.log('Logging enabled');</script>
 </body>
 </html>
