--- a/src/widgets/widgets.editor.css
+++ b/src/widgets/widgets.editor.css
@@ -160,7 +160,7 @@
 		.glowCSSVERSION-editor .glowCSSVERSION-hidden { position: absolute; left: -2500px; width: 1px; }
 
 		/* without images */
-		.glowCSSVERSION-basic .glowCSSVERSION-editor .editor-toolbar-icon span { border: none; height: auto; overflow: normal; width: auto; }
+		.glowCSSVERSION-basic .glowCSSVERSION-editor .editor-toolbar-icon span { border: none; height: auto; overflow: hidden; width: auto; }
 		.glowCSSVERSION-basic .glowCSSVERSION-editor .editor-toolbar-item .hover span span { border: 1px solid #000; }
 
 		.glowCSSVERSION-editor iframe { border: 0; margin: 0; padding: 0; width: 100%; }
