--- a/test/testdata/screen.css
+++ b/test/testdata/screen.css
@@ -355,4 +355,11 @@ ul.unitTests span.testStats span {
 .displayTest2 {
 	display: none;
 }
+/* anim tests */
+	#fadein, #fadeout, #slideup, #slidedown {
+		width: 100px;
+		height: 100px;
+		overflow: hidden;
+	}
+/* end */
 /* END */
