anim: Fix for slideDown if elements have height defined as 0 in CSS

--- a/test/testdata/screen.css
+++ b/test/testdata/screen.css
@@ -361,5 +361,10 @@ ul.unitTests span.testStats span {
 		height: 100px;
 		overflow: hidden;
 	}
+	#slidedown2 {
+		width: 100px;
+		height: 0;
+		overflow: hidden;
+	}
 /* end */
 /* END */
